--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+  firebase_storage: ^10.3.11
+  cloud_firestore: ^3.5.1
+  uuid: ^3.0.6
+  hooks_riverpod: ^2.0.2
+  font_awesome_flutter: ^10.2.1
+  flutter_facebook_auth: ^4.4.1+1
+  google_sign_in: ^5.4.2
+  image_picker: ^0.8.6
+  image: ^3.2.0
+  flutter_hooks: ^0.18.5+1
+  collection: ^1.16.0
+  intl: ^0.17.0
+  video_thumbnail: ^0.5.3
+  video_player: ^2.4.7
+  lottie: ^1.4.3
+  share_plus: ^5.0.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
